--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Pink_Castle_j2.jpeg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Pink Castle Jumper</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Red_Castle_j1.jpeg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Red Castle Jumper</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pink_slide_ms1.jpeg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Pink Slider Mini-Slide</h3>
 										</header>
 									</article>
 									<article class="item">
