--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/LFJ_Logo_2.JPG" alt="" /></span>
 							<h1 id="title">La Familia Jumpers</h1>
 							<p>Jumpers/ Tables/ Desserts & More</p>
 						</div>
@@ -62,6 +62,8 @@
 						<div class="container">
 
 							<header>
+					
+								<a href="#" class="image featured"><img src="images/LFJ_Logo.PNG" alt="" /></a>
 								<h2 > <strong>La Familia Jumpers</strong><br />
 								</h2>
 							
@@ -142,10 +144,10 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>About Hernandez Family</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/LFJ_Logo_2.JPG" alt="" /></a>
 
 							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
